added html form and additional styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
 
   <body>
     <%= yield %>
-    <a href="/worries">Current Worries</a>
+    <ul>
+      <li><a href="/welcome/index">Home</a></li>
+      <li><a href="/worries">Current Worries</a></li>
+      <li><a href="worries/new">Add Worry</a></li>
+    </ul>
   </body>
 </html>
