--- a/app/views/worries/index.html.erb
+++ b/app/views/worries/index.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
- <% @worries.each do |worry| %>
-	<p><%= worry.current_worry %></p>
-	<p><%= worry.priority %> </p>
-	<p><%= worry.reflection %></p>
-<% end %>
+	<div class="card">
+		<h1>Worries</h1>
+	 <% @worries.each do |worry| %>
+		<p><%= worry.current_worry %></p>
+		<p><%= worry.priority %> </p>
+		<p><%= worry.reflection %></p>
+	<% end %>
+	</div>
 </div>
