added show page and fixed create functionality

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <%= yield %>
-    <ul>
+    <ul id="nav">
       <li><a href="/welcome/index">Home</a></li>
       <li><a href="/worries">Current Worries</a></li>
       <li><a href="worries/new">Add Worry</a></li>
