--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,10 +1,9 @@
 * {
-	background-color: #C1DDFB;
 	font-family: monospace;
 }
 
 div {
-	padding-left: 20%;
+	padding-left: 10%;
 	position: fixed;
 }
 
@@ -39,8 +38,8 @@ li a:hover:not(.active) {
 .card {
   box-shadow: 4px 4px 8px 4px rgba(0,0,0,0.2);
   transition: 0.3s;
-  background-color: #7799BD;
   width: 60%;
+  background-color: #C1DDFB;
 }
 
 .card:hover {
@@ -48,5 +47,6 @@ li a:hover:not(.active) {
 }
 
 .container {
-  padding: 20px 100px;
+  padding: 25px 100px 25px 200px;
+  
 }
