--- a/app/views/worries/_form.html.erb
+++ b/app/views/worries/_form.html.erb
@@ -19,7 +19,7 @@
     <%= form.text_field :current_worry %><br>
 
     <%= form.label :priority %><br>
-    <%= form.select :integer, [1, 2, 3, 4, 5] %>
+    <%= form.select :priority, [1, 2, 3, 4, 5] %>
 
     <%= form.label :reflection %><br>
     <%= form.text_area :reflection %>
