--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,21 +1,26 @@
-* {
+body {
 	font-family: monospace;
 }
 
 div {
 	padding-left: 10%;
-	position: fixed;
+	position: relative;
 }
 
 ul {
   list-style-type: none;
+  display: block;
   padding: 0;
   margin: 0;
   width: 15%;
-  height: 100%;
-  position: fixed; 
+  height: 25%;
+  position: absolute; 
   overflow: auto; 
   text-decoration: none;
+}
+
+a {
+ text-decoration: none;
 }
 
 li a {
@@ -37,9 +42,10 @@ li a:hover:not(.active) {
 
 .card {
   box-shadow: 4px 4px 8px 4px rgba(0,0,0,0.2);
-  transition: 0.3s;
+  transition: 0.1s;
   width: 60%;
   background-color: #C1DDFB;
+  padding: 1%;
 }
 
 .card:hover {
