--- a/app/views/worries/index.html.erb
+++ b/app/views/worries/index.html.erb
@@ -1,13 +1,11 @@
 <div class="container">
-	<div class="card">
 
-		<h1>Worries</h1>
-	 <% @worries.each do |worry| %>
-		<p><%= worry.current_worry %></p>
-		<p><%= worry.priority %> </p>
-		<p><%= worry.reflection %></p>
+	<h1>Worries</h1>
+	 <% @worries.each do | worry| %>
+	 
+		<a href= "/worries/<%= worry['id'] %>"><p class="card"><%= worry.current_worry %></p></a>
+		<p>Priority: <%= worry.priority %> </p>
+		<p>Reflection: <%= worry.reflection %></p>
 	<% end %>
-
-	</div>
 
 </div>
