minor functionality fixes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
   <body>
     <%= yield %>
     <ul id="nav">
-      <li><a href="/welcome/index">Home</a></li>
-      <li><a href="/worries">Current Worries</a></li>
-      <li><a href="worries/new">Add Worry</a></li>
+      <li><a href="http://localhost:3000/welcome/index">Home</a></li>
+      <li><a href="http://localhost:3000/worries">Current Worries</a></li>
+      <li><a href="http://localhost:3000/worries/new">Add Worry</a></li>
     </ul>
   </body>
 </html>
